# guify

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.sqlite3  package-lock.json  package.json  requirements.txt  run_debug.py  setup.cfg  test_BaseTest.py  test_Monitor.py  test_TestWorker.py  webpack.config.js
.github/workflow/: build.yaml  publish.yaml
.github/workflows/: build.yaml  build_and_publish.yaml  publish.yaml
docs/: README.md  config.ini  example.py
public/: index.html
src/: index.js  postbuild.js
src/guify/: App.py  BaseTest.py  ConfigTab.py  Monitor.py  TestPool.py  TestWorker.py  __init__.py  report_template.html  utils.py
src/guify/ReportGeneration/: report_template.html
src/guify/web/: App.js  asset-manifest.json  index.html
src/guify/web/components/: Layout.js
src/guify/web/components/Config/: ConfigPane.js
src/guify/web/components/Home/: ParamList.js
src/guify/web/static/css/: main.a0d815e9.css  main.a0d815e9.css.map
src/guify/web/static/js/: main.94803c24.js  main.94803c24.js.map
src/python/: App.py  ConfigTab.py  __init__.py  constants.py
src/react/: App.js
src/react/components/: Layout.js
src/react/components/About/: index.js
src/react/components/Config/: ConfigPane.js  DataPair.js  SectionNav.js  SideBar.js  index.js
src/react/components/Home/: Monitor.js  ParamEntry.js  ParamList.js  TestList.js  TestSection.js  WorkerStatus.js  index.js
src/react/components/Settings/: Sidebar.js  index.js
src/react/components/Settings/icons/: question-mark-cursor.js
src/react/style/: App.css
