[metadata]
name = guify
version = 0.2.11
author = Michael Druyan
author_email = michael@druyan.net
description = A tool that will GUI-ify your functions
long_description = file: docs/README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
include_package_data = true

install_requires = 
    bottle==0.12.25
    bottle-websocket==0.2.9
    cffi==1.15.1 ; platform_python_implementation == 'CPython' and sys_platform == 'win32'
    eel==0.16.0
    future==0.18.3 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
    gevent==22.10.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
    gevent-websocket==0.10.1
    greenlet==2.0.2 ; platform_python_implementation == 'CPython'
    pycparser==2.21
    pymsgbox==1.0.9
    pyparsing==3.0.9 ; python_full_version >= '3.6.8'
    setuptools==67.7.2 ; python_version >= '3.7'
    whichcraft==0.6.1
    zope.event==4.6
    zope.interface==6.0 ; python_version >= '3.7'


[options.packages.find]
where = src

[options.package_data]
guify = src/guify/web

[build-system]
requires = ["setuptools>=58.2.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"
